// Copyright 2017 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package gitiles.messages;

option go_package = "go.chromium.org/luci/scheduler/appengine/task/gitiles/pb";

// Child is the last part and its sha1 tip.
message Child {
  string suffix = 1;
  bytes sha1 = 2;
}

// RefSpace is a bunch of children which share the same ref namespace (prefix).
message RefSpace {
  string prefix = 1;
  repeated Child children = 2;
}

// RepositoryState stores tips of all watched refs in a repo.
message RepositoryState {
  repeated RefSpace spaces = 1;

  // Ref regexes used the last time this task ran.
  repeated string refs = 2;
}

// DebugState is returned as part of GetDebugJobState RPC response.
message DebugState {
  message Ref {
    string ref = 1;
    string commit = 2;
  }
  repeated Ref known = 1;   // tips as stored in the datastore
  repeated Ref current = 2; // tips as returned by gitiles right now
  repeated string search = 3; // search query used to retrieve refs
}
